tests/error/poly_errors/arg_mismatch1.py
from guppylang.decorator import guppy

T = guppy.type_var("T")


@guppy.declare
def foo(x: T, y: T) -> None:
    ...


@guppy
def main(x: bool, y: tuple[bool]) -> None:
    foo(x, y)


main.compile(entrypoint=False)
