tests/error/poly_errors/arg_mismatch1.err
Error: Type mismatch (at $FILE:13:11)
   | 
11 | @guppy
12 | def main(x: bool, y: tuple[bool]) -> None:
13 |     foo(x, y)
   |            ^ Expected argument of type `bool`, got `(bool)`

Guppy compilation failed due to 1 previous error
